--- a/src/Components/layout.css
+++ b/src/Components/layout.css
@@ -1,58 +1,55 @@
 .wrapper{
     display: flex;
+    margin:0;
     flex-direction: column;
-    /* flex: 1; */
     height: 100vh;
+    font-size: 16px;
 }
 .dash{
   flex:2;
-  /* border:1px solid black; */
   display: flex;
 }
 .dashInput{
     flex:4;
-    /* border:1px solid black; */
     display: flex;
     flex-direction: column;
 }
 .buyCrypto{
     flex: 1 1;
-    /* border: 1px solid black; */
     display: flex;
     align-items: flex-end;
-    padding-left: 1.5rem;
-    /* border:1px solid black; */
+    padding-left: 2rem;
 }
 .inputCurr{
     flex:2;
-    /* border:1px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .refundAddress{
     flex:1;
-    /* border:1px solid black; */
 }
 .dashLoader{
     flex:1;
-    /* border:1px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.idealSpinner{
+    width: 2rem !important;
+    height: 2rem !important;
 }
 
 
 .dashOutput{
     flex:4;
-    /* border:1px solid black; */
     display: flex;
     flex-direction: column;
 }
 .marketRate{
     flex: 1 1;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     padding-left: 2rem;
     justify-content: space-between;
 }
@@ -62,7 +59,6 @@
 
 .outputCurr{
     flex:2;
-    /* border:1px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -70,40 +66,51 @@
 }
 .refundOutputAddress{
     flex:1;
-    /* border:1px solid black; */
     display:flex;
     justify-content: center;
     align-items: center;
 
 }
 
+.loaderSpace, .loaderPos{
+    flex: 0.4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loaderPos:before {
+    background-color: rgba(49, 37, 37, 0.2);  
+    border-radius: 6px;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    content: " ";
+} 
+
 
 .exchange{
     flex:2;
-    /* border:1px solid black; */
     display: flex;
     flex-direction: column;
 }
 .exchangeTab{
     flex:4;
     display: flex;
-    /* border: 1px solid black; */
 }
 .sending{
-    /* border: 1px solid black; */
     flex:4;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
 .wrapsend{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-}
-.sendingMsg{
-
 }
 .sendingAmount{
     font-size: 2rem;
@@ -112,19 +119,17 @@
     font-size:20px;
 }
 .arrow{
-    /* border: 1px solid black; */
     flex:1;
     display: flex;
     justify-content: center;
     align-items: center
 }
 .receiving{
-    /* border: 1px solid black; */
     flex: 4 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 .receivingAmount{
     font-size: 2rem;
@@ -142,7 +147,6 @@
     display: flex;
 }
 .poweredBy{
-    /* border: 1px solid black; */
     flex:2;
     display: flex;
     justify-content: center;
@@ -151,7 +155,6 @@
 }
 .accept{
     flex:4;
-    /* border:1px solid black; */
 }
 .termsCondition{
     display: flex;
@@ -167,24 +170,19 @@ a{
 .logoSize{
     height: 20px;
     width:20px;
-    /* margin-right: 40px, */
 }
 .logoSize1{
-    /* height: 20px;
-    width:20px; */
     padding-right: 40px,
 
 }
 .renderOption{
     display: flex;
-    /* justify-content: space-between; */
     align-items: center;
 }
 
 @media all and (max-width:950px){
     .dash{
         flex:4;
-        /* border:1px solid black; */
         display: flex;
         flex-direction: column;
     }
