--- a/src/Components/layout.css
+++ b/src/Components/layout.css
@@ -1,11 +1,13 @@
 .wrapper{
     display: flex;
-    margin:0;
+    /* margin:0; */
     flex-direction: column;
-    height: 100vh;
+    height: 85vh;
     font-size: 16px;
+
 }
 .dash{
+  padding-top: 2rem;;
   flex:2;
   display: flex;
 }
