--- a/src/Components/layout.css
+++ b/src/Components/layout.css
@@ -149,11 +149,15 @@
     display: flex;
 }
 .poweredBy{
+    font-size:12px;
     flex:2;
     display: flex;
     justify-content: center;
     align-items: center;
 
+}
+.poweredBy span{
+    font-weight: 700;
 }
 .accept{
     flex:4;
@@ -182,7 +186,7 @@ a{
     align-items: center;
 }
 
-@media all and (max-width:950px){
+@media all and (max-width:1100px){
     .dash{
         flex:4;
         display: flex;
